--- a/sections/Theory/software-architektur.tex
+++ b/sections/Theory/software-architektur.tex
@@ -153,7 +153,7 @@ Im Detail bedeutet dies, dass die jeweilige Webseite per Url Aufruf angefragt wi
 Auch die Plattform ist in Ruby on Rails implementiert. Dabei handelt es sich bei der Plattform um dieselbe Applikation wie das CMS außer das die graphische Darstellung durch das JavaScript Framework React übernommen wird. So wird beim Aufruf der Plattform eine Anfrage an den Controller geschickt und dieser gibt anschließend die kompilierte React Anwendung aus. Diese lädt eigenständig jegliche Informationen über HTTP Anfragen und kümmert sich um interne Seitenaufrufe. Die Anfragen werden dabei asynchron an die Rails Applikation geschickt und vom Controller beantwortet. Somit erhält die React Anwendung über die Kommunikation von Controller und Modul, den Content aus der Datenbank, der vorher eingepflegt wurde (siehe Abbildung).
 % Todo hier muss noch eine Abbildung eingefügt werden
 
-Es gibt also eine Aufteilung bezüglich der graphischen Darstellung in Content Management System und Plattform. Die Datenspeicherung und Verwaltung sind jedoch gleich. Die gesamte Codebase wird in einem Bereitstellungsprozesses dem Hosting Service zur Verfügung gestellt. Damit handelt es sich bei dem System von PluraPolit um ein Monolith, welches teilweise Modular ist, die REST-Standards erfüllt und nach dem Model-View-Controller-Ansatz aufgeteilt ist. Des Weiteren nutz es vereinzelt externe Services von AWS, um Tondateien zu speichern und Transcripierungen vorzunehmen.
+Es gibt also eine Aufteilung bezüglich der graphischen Darstellung in Content Management System und Plattform. Die Datenspeicherung und Verwaltung sind jedoch gleich. Die gesamte Codebase wird in einem Bereitstellungsprozesses dem Hosting Service zur Verfügung gestellt. Damit handelt es sich bei dem System von PluraPolit um ein Monolith, welches teilweise Modular ist, die REST-Standards erfüllt und nach dem Model-View-Controller-Ansatz aufgeteilt ist. Des Weiteren nutz es vereinzelt externe Services von AWS, um Tondateien zu speichern und Transkripierungen vorzunehmen.
 
 %Todo Bilder erstellen und einfügen 
 % Todo anderen Namen für Plattform, Nutzersicht, User-Plattform, PluraPolit-Webseite
